; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_lookup_item.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_lookup_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext4_xattr_item = type { i64, i8*, i64, i32, i32, i32 }
%struct.ext4_xattr_ref = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@EXT4_XATTR_INDEX_SYSTEM = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"data\00", align 1
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ext4_xattr_item* (%struct.ext4_xattr_ref*, i64, i8*, i64)* @ext4_xattr_lookup_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ext4_xattr_item* @ext4_xattr_lookup_item(%struct.ext4_xattr_ref* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.ext4_xattr_ref*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.ext4_xattr_item, align 8
  store %struct.ext4_xattr_ref* %0, %struct.ext4_xattr_ref** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %9, i32 0, i32 0
  %11 = load i32, i32* @FALSE, align 4
  %12 = sext i32 %11 to i64
  store i64 %12, i64* %10, align 8
  %13 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %9, i32 0, i32 1
  %14 = load i32, i32* @FALSE, align 4
  %15 = sext i32 %14 to i64
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** %13, align 8
  %17 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %9, i32 0, i32 2
  %18 = load i64, i64* %6, align 8
  store i64 %18, i64* %17, align 8
  %19 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %9, i32 0, i32 3
  %20 = load i8*, i8** %7, align 8
  %21 = ptrtoint i8* %20 to i32
  store i32 %21, i32* %19, align 8
  %22 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %9, i32 0, i32 4
  %23 = load i64, i64* %8, align 8
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* %22, align 4
  %25 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %9, i32 0, i32 5
  store i32 0, i32* %25, align 8
  %26 = load i64, i64* %6, align 8
  %27 = load i64, i64* @EXT4_XATTR_INDEX_SYSTEM, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %39

29:                                               ; preds = %4
  %30 = load i64, i64* %8, align 8
  %31 = icmp eq i64 %30, 4
  br i1 %31, label %32, label %39

32:                                               ; preds = %29
  %33 = load i8*, i8** %7, align 8
  %34 = call i32 @memcmp(i8* %33, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %39, label %36

36:                                               ; preds = %32
  %37 = load i32, i32* @TRUE, align 4
  %38 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %9, i32 0, i32 3
  store i32 %37, i32* %38, align 8
  br label %39

39:                                               ; preds = %36, %32, %29, %4
  %40 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %5, align 8
  %41 = call %struct.ext4_xattr_item* @ext4_xattr_item_search(%struct.ext4_xattr_ref* %40, %struct.ext4_xattr_item* %9)
  ret %struct.ext4_xattr_item* %41
}

declare dso_local i32 @memcmp(i8*, i8*, i32) #1

declare dso_local %struct.ext4_xattr_item* @ext4_xattr_item_search(%struct.ext4_xattr_ref*, %struct.ext4_xattr_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
